2011-01-20  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12360: Show error message, if the module is not accessible for the current user

2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 

	* Added Feature #12340: Enhance the tx_linkvalidator_linkTypes_Interface (thanks to Ernesto Baschny and Christopher Stelmaszyk)
	* Added Feature #12344: Migrate to t3lib_htmlmail to SwiftMailer (thanks to Ernesto Baschny and Christopher Stelmaszyk)
	* Fixed bug #12377: Other link types than supported use the same type than the last found

2011-01-18  Oliver Hader  <oliver.hader@typo3.org>

	* Cleanup: Fixed PHPdoc comments and type hints in module, processing and abstract linktype class

2011-01-17  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #10989: Anchors in internal links are incorrectly treated as pages (thanks to Michael Miousse) 

2011-01-17  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #12226: Website that has multiple domainsrecords produces funny links

2011-01-15  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12243: Information on storage location of broken links is wrong in text
	* Fixed bug #12232: Redirects to https get reported as 404 (thanks to Andreas Lappe)
	* Fixed bug #12235: Reporting errors does not work with cURL (thanks to Andreas Lappe)

2011-01-08  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12019: Do not display the format of the date of the last check
	* Fixed bug #12026: Combine columns Type, Headline and Field
	* Fixed bug #12022: Add CSH labels for the labels of the Scheduler job
	* Fixed bug #12024: Remove cellspacing (thanks to Steffen Gebert)
	* Fixed bug #12025: Add link to scheduler

2011-01-07  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Followup to bug #11269: Proofread the manual
	* Followup to bug #11822: Add extension description in ext_emconf.php
	* Fixed bug #12008: Row "Title" should be called "Headline"