@@ -1,6 +1,7 @@
 2011-01-20  Christopher Stelmaszyk  <chrissitopher@gmx.de>
 
 	* Fixed bug #12360: Show error message, if the module is not accessible for the current user
+	* Fixed bug #12412: XSS issue in tx_linkvalidator_tasks_ValidateAdditionalFieldProvider
 
 2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 
 
